--- a/src/admin-imooc-node/package.json
+++ b/src/admin-imooc-node/package.json
@@ -11,6 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "boom": "^7.3.0",
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "express-validator": "^6.13.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1"
   }
 }
