--- a/src/admin-imooc-node/package.json
+++ b/src/admin-imooc-node/package.json
@@ -17,6 +17,7 @@
     "express-jwt": "^6.1.0",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1"
   }
 }
