--- a/src/admin-imooc-node/package.json
+++ b/src/admin-imooc-node/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.5.9",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -18,6 +19,7 @@
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xml2js": "^0.4.23"
   }
 }
