--- a/src/admin-imooc-node/package.json
+++ b/src/admin-imooc-node/package.json
@@ -18,6 +18,7 @@
     "express-jwt": "^6.1.0",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "xml2js": "^0.4.23"
