--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "cross-env NODE_ENV=dev node app.js",
+    "start:prod": "cross-env NODE_ENV=prod node app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "adm-zip": "^0.5.9",
     "boom": "^7.3.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
